[b]Version 0.5.62[/b] (not released yet):

(2007-11-13)
 * Simplified the code of defaultgui, using the actions provided by
   the toolbars instead of creating new ones, and removing some old
   code.

(2007-11-12)
 * (Fix) Now changing the volume when the file is paused really keeps
   pause. This is done by not changing the volume immediately but
   scheduling the volume change just after the file plays again.
 * The position and size calculations of the floating widget is now made
   in the floatingwidget code instead of the gui code.
 * Now the floating control shows with an animation! (It can be disabled in 
   the config file).
 * (By user request) Added a new function for the mouse wheel: change playback
   speed.
 
(2007-11-10)
 * (Experimental) New floating control (it looks like the old one) by using the
   new floatingwidget. This time it has an embedded toolbar, so actions are 
   added to it (can't actions be added directly to widgets?). Previously every 
   button and widget had to be created individually (making connections and 
   so on), duplicating code. Now it's a lot easier.
 * Started to write the "mini gui". This is an optional gui, with very few
   buttons: it doesn't have a toolbar, and the control bar only have a 
   play/pause, stop and mute buttons, and the time slider. It also provides
   a floating control with less buttons.
   To enable it: smplayer -mini
   This gui is in fact intended to be an example on how to create alternative
   gui's for smplayer. 

(2007-11-09)
 * Added options in Preferences->Advanced to save automatically the mplayer
   log every time a new file is played. Intended for external applications.
   Most of the code developed by iSage.

(2007-11-07)
 * More work on the new code for time and volume sliders.

(2007-11-06)
 * (Experimental internal change) Created a wrapper for the time and volume
   slider using QWidgetAction. Until now whenever a time or volume slider were